# vkfwd

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.ps1  setup.sh
dev/env/: alias.bash.txt  alias.powershell.txt  requirements.txt  setup.sh
dev/generator/: vulkan_metadata.py
dev/test/: CMakeLists.txt  generated_metadata.sh  smoke_structure.sh
dev/test/internal-test/: CMakeLists.txt  internal-test.cmake  protocol_test.cpp
dev/test/internal-test/script/: generated_metadata.sh  smoke_structure.sh
doc/: api-pack-unpack-design.md  lavapipe-vulkan-frontend-report.md  mesa-vulkan-frontend-report.md  repository-structure.md  todo.md  vulkan-coverage-plan.md  vulkan-frontend-virtualization-research-plan.md  vulkan-return-output-api-groups.md
src/contrib/: CMakeLists.txt  README.md
src/vkfwd/: CMakeLists.txt  call_record.hpp  forwarder.cpp  forwarder.hpp  forwarding_sink.hpp  null_forwarding_sink.cpp  null_forwarding_sink.hpp  protocol.hpp  text_call_deserializer.cpp  text_call_serializer.cpp  trace_replay_executor.hpp
src/vkfwd/core/: api_endpoint.hpp  call_record.hpp  null_api_endpoint.cpp  null_api_endpoint.hpp
src/vkfwd/core/hook/: README.md
src/vkfwd/core/hooks/: README.md  vkCreateDeviceHooks.cpp
src/vkfwd/facade/: README.md
src/vkfwd/facade/scripts/: README.md
src/vkfwd/facade/tests/: README.md
src/vkfwd/ferry/: CMakeLists.txt  README.md
src/vkfwd/ferry/core/: README.md  api_endpoint.hpp  blob.cpp  blob.hpp  call_record.hpp  logging.cpp  logging.hpp  null_api_endpoint.cpp  null_api_endpoint.hpp  null_transport_channel.cpp  null_transport_channel.hpp  protocol.hpp  text_call_deserializer.hpp  text_call_serializer.cpp  text_call_serializer.hpp  transport_channel.hpp  transport_session.hpp
src/vkfwd/ferry/core/hook/: README.md  vkCreateDeviceHook.cpp  vkCreateDeviceHook.hpp
src/vkfwd/ferry/core/test/: internal-test.cmake  pnext_chain_test.cpp
src/vkfwd/ferry/core/wire/: wire_1_0.hpp
src/vkfwd/ferry/forwarder/: README.md  forwarder.cpp  forwarder.hpp  layer.cpp
src/vkfwd/ferry/receiver/: README.md  call_record.hpp  receiver.cpp  receiver.hpp  trace_replay_executor.cpp  trace_replay_executor.hpp
src/vkfwd/ferry/script/generator/: vulkan_metadata.py
src/vkfwd/ferry/scripts/generator/: vulkan_metadata.py
src/vkfwd/ferry/test/: generated_metadata.sh  smoke_structure.sh
src/vkfwd/ferry/tests/: generated_metadata.sh  smoke_structure.sh
src/vkfwd/forwarder/: forwarder.cpp
src/vkfwd/hooks/: README.md
src/vkfwd/manifest/: VK_LAYER_VKFWD_forwarder.json.in
src/vkfwd/receiver/: receiver.hpp  trace_replay_executor.cpp
